@@ -73,6 +73,8 @@ long UMODE_HIDEOPER = 0L;      /* Hide oper mode */
 long UMODE_SETHOST = 0L;       /* Used sethost */
 long UMODE_STRIPBADWORDS = 0L; /* Strip badwords */
 
+long AllUmodes;		/* All umodes */
+long SendUmodes;	/* All umodes which are sent to other servers (global umodes) */
 
 void	umode_init(void)
 {
@@ -87,31 +89,31 @@ void	umode_init(void)
 	}
 	Usermode_highest = 0;
 	/* Set up modes */
-	UMODE_INVISIBLE = umode_get('i'); /*  0x0001	 makes user invisible */
-	UMODE_OPER = umode_get('o');      /*  0x0002	 Operator */
-	UMODE_WALLOP = umode_get('w');    /*  0x0004	 send wallops to them */
-	UMODE_FAILOP = umode_get('g');    /*  0x0008	 Shows some global messages */
-	UMODE_HELPOP = umode_get('h');    /*  0x0010	 Help system operator */
-	UMODE_REGNICK = umode_get('r');   /*  0x0020	 Nick set by services as registered */
-	UMODE_SADMIN = umode_get('a');    /*  0x0040	 Services Admin */
-	UMODE_ADMIN = umode_get('A');     /*  0x0080	 Admin */
-	UMODE_SERVNOTICE = umode_get('s');/* 0x0100	 server notices such as kill */
-	UMODE_LOCOP = umode_get('O');     /* 0x0200	 Local operator -- SRB */
-	UMODE_RGSTRONLY = umode_get('R'); /* 0x0400  Only reg nick message */
-	UMODE_WEBTV = umode_get('V');     /* 0x0800  WebTV Client */
-	UMODE_SERVICES = umode_get('S');  /* 0x4000	 services */
-	UMODE_HIDE = umode_get('x');	     /* 0x8000	 Hide from Nukes */
-	UMODE_NETADMIN = umode_get('N');  /* 0x10000	 Network Admin */
-	UMODE_COADMIN = umode_get('C');   /* 0x80000	 Co Admin */
-	UMODE_WHOIS = umode_get('W');     /* 0x100000	 gets notice on /whois */
-	UMODE_KIX = umode_get('q');       /* 0x200000	 usermode +q */
-	UMODE_BOT = umode_get('B');       /* 0x400000	 User is a bot */
-	UMODE_SECURE = umode_get('z');    /*	0x800000	 User is a secure connect */
-	UMODE_VICTIM = umode_get('v');    /* 0x8000000	 Intentional Victim */
-	UMODE_DEAF = umode_get('d');      /* 0x10000000       Deaf */
-	UMODE_HIDEOPER = umode_get('H');  /* 0x20000000	 Hide oper mode */
-	UMODE_SETHOST = umode_get('t');   /* 0x40000000	 used sethost */
-	UMODE_STRIPBADWORDS = umode_get('G'); /* 0x80000000	 */
+	UMODE_INVISIBLE = umode_gget('i'); /*  0x0001	 makes user invisible */
+	UMODE_OPER = umode_gget('o');      /*  0x0002	 Operator */
+	UMODE_WALLOP = umode_gget('w');    /*  0x0004	 send wallops to them */
+	UMODE_FAILOP = umode_gget('g');    /*  0x0008	 Shows some global messages */
+	UMODE_HELPOP = umode_gget('h');    /*  0x0010	 Help system operator */
+	UMODE_REGNICK = umode_gget('r');   /*  0x0020	 Nick set by services as registered */
+	UMODE_SADMIN = umode_gget('a');    /*  0x0040	 Services Admin */
+	UMODE_ADMIN = umode_gget('A');     /*  0x0080	 Admin */
+	UMODE_SERVNOTICE = umode_lget('s');/* 0x0100	 server notices such as kill */
+	UMODE_LOCOP = umode_lget('O');     /* 0x0200	 Local operator -- SRB */
+	UMODE_RGSTRONLY = umode_gget('R'); /* 0x0400  Only reg nick message */
+	UMODE_WEBTV = umode_gget('V');     /* 0x0800  WebTV Client */
+	UMODE_SERVICES = umode_lget('S');  /* 0x4000	 services */
+	UMODE_HIDE = umode_gget('x');	     /* 0x8000	 Hide from Nukes */
+	UMODE_NETADMIN = umode_gget('N');  /* 0x10000	 Network Admin */
+	UMODE_COADMIN = umode_gget('C');   /* 0x80000	 Co Admin */
+	UMODE_WHOIS = umode_gget('W');     /* 0x100000	 gets notice on /whois */
+	UMODE_KIX = umode_gget('q');       /* 0x200000	 usermode +q */
+	UMODE_BOT = umode_gget('B');       /* 0x400000	 User is a bot */
+	UMODE_SECURE = umode_gget('z');    /*	0x800000	 User is a secure connect */
+	UMODE_VICTIM = umode_gget('v');    /* 0x8000000	 Intentional Victim */
+	UMODE_DEAF = umode_gget('d');      /* 0x10000000       Deaf */
+	UMODE_HIDEOPER = umode_gget('H');  /* 0x20000000	 Hide oper mode */
+	UMODE_SETHOST = umode_gget('t');   /* 0x40000000	 used sethost */
+	UMODE_STRIPBADWORDS = umode_gget('G'); /* 0x80000000	 */
 }
 
 void make_umodestr(void)
@@ -127,7 +129,12 @@ void make_umodestr(void)
 	}
 	*m = '\0';
 }
-long	umode_get(char ch)
+
+/* umode_get:
+ * Add a usermode with character 'ch', if global is set to 1 the usermode is global
+ * (sent to other servers) otherwise it's a local usermode
+ */
+long	umode_get(char ch, int global)
 {
 	short	 i = 0;
 	short	 j = 0;
@@ -150,6 +157,9 @@ long	umode_get(char ch)
 				if (i > Usermode_highest)
 					Usermode_highest = i;
 		make_umodestr();
+		AllUmodes |= Usermode_Table[i].mode;
+		if (global)
+			SendUmodes |= Usermode_Table[i].mode;
 		return (Usermode_Table[i].mode);
 	}
 	else
@@ -171,6 +181,8 @@ int	umode_delete(char ch, long val)
 		if ((Usermode_Table[i].flag == ch) && (Usermode_Table[i].mode == val))
 		{
 			Usermode_Table[i].flag = '\0';
+			AllUmodes &= ~val;
+			SendUmodes &= ~val;
 			return 1;
 		}	
 		i++;
